compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_function_call.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\nfn bool() {\n  True\n}\n\npub fn main() {\n  assert bool()\n}\n"
---
----- SOURCE CODE

fn bool() {
  True
}

pub fn main() {
  assert bool()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec bool() -> boolean().
bool() ->
    true.

-spec main() -> nil.
main() ->
    case bool() of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => ~"Assertion failed.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 7,
                kind => function_call,
                arguments => [],
                start => 41,
                'end' => 54,
                expression_start => 48
            })
    end.
