compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_literal.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\npub fn main() {\n  assert False\n}\n"
---
----- SOURCE CODE

pub fn main() {
  assert False
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> nil.
main() ->
    case false of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => ~"Assertion failed.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                kind => expression,
                expression => #{
                    kind => literal,
                    value => false,
                    start => 26,
                    'end' => 31
                },
                start => 19,
                'end' => 31,
                expression_start => 26
            })
    end.
