compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_on_consts.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\npub const wibble = [1, 2, 3]\npub const wobble = [1, 2]\n\npub fn assert_answer(x) {\n  assert wibble == wobble\n}\n"
---
----- SOURCE CODE

pub const wibble = [1, 2, 3]
pub const wobble = [1, 2]

pub fn assert_answer(x) {
  assert wibble == wobble
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([assert_answer/1, wobble/0, wibble/0]).

-spec wobble() -> list(integer()).
wobble() ->
    [1, 2].

-spec wibble() -> list(integer()).
wibble() ->
    [1, 2, 3].

-spec assert_answer(any()) -> nil.
assert_answer(X) ->
    case [1, 2, 3] =:= [1, 2] of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => ~"Assertion failed.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"assert_answer",
                line => 6,
                kind => binary_operator,
                operator => '==',
                left => #{
                    kind => expression,
                    value => [1, 2, 3],
                    start => 92,
                    'end' => 98
                },
                right => #{
                    kind => expression,
                    value => [1, 2],
                    start => 102,
                    'end' => 108
                },
                start => 85,
                'end' => 108,
                expression_start => 92
            })
    end.
