compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_variable.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\npub fn main() {\n  let x = True\n  assert x\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let x = True
  assert x
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> nil.
main() ->
    X = true,
    case X of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => ~"Assertion failed.",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 4,
                kind => expression,
                expression => #{
                    kind => expression,
                    value => false,
                    start => 41,
                    'end' => 42
                },
                start => 34,
                'end' => 42,
                expression_start => 41
            })
    end.
