compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_with_message.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\npub fn main() {\n  assert True as \"This shouldn't fail\"\n}\n"
---
----- SOURCE CODE

pub fn main() {
  assert True as "This shouldn't fail"
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> nil.
main() ->
    case true of
        true ->
            nil;

        false ->
            erlang:error(#{
                gleam_error => assert,
                message => ~"This shouldn't fail",
                file => ~"project/test/my/mod.gleam",
                module => ~"my/mod",
                function => ~"main",
                line => 3,
                kind => expression,
                expression => #{
                    kind => literal,
                    value => false,
                    start => 26,
                    'end' => 30
                },
                start => 19,
                'end' => 30,
                expression_start => 26
            })
    end.
