compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__pattern_let.snap
---
source: compiler-core/src/erlang/tests/assert.rs
assertion_line: 28
expression: "pub fn go(x) {\n  assert [1 as a, b, c] = x\n  [a, b, c]\n}"
---
-module(the_app).
-compile([no_auto_import, nowarn_unused_vars]).

-export([go/1]).

-spec go(list(integer())) -> list(integer()).
go(X) ->
    [1 = A, B, C] = case X of
        [1, _, _] -> X;
        _assert_fail ->
            erlang:error(#{gleam_error => assert,
                        message => <<"Assertion pattern match failed"/utf8>>,
                        value => _assert_fail,
                        module => <<"the_app"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2})
    end,
    [A, B, C].

