compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__variable_rewrites.snap
---
source: compiler-core/src/erlang/tests/assert.rs
assertion_line: 39
expression: "pub fn go() {\n  let assert Ok(y) = Ok(1)\n  let assert Ok(y) = Ok(1)\n  y\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars]).

-export([go/0]).

-spec go() -> integer().
go() ->
    _assert_subject = {ok, 1},
    {ok, Y} = case _assert_subject of
        {ok, _} -> _assert_subject;
        _assert_fail ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Assertion pattern match failed"/utf8>>,
                        value => _assert_fail,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 2})
    end,
    _assert_subject@1 = {ok, 1},
    {ok, Y@1} = case _assert_subject@1 of
        {ok, _} -> _assert_subject@1;
        _assert_fail@1 ->
            erlang:error(#{gleam_error => let_assert,
                        message => <<"Assertion pattern match failed"/utf8>>,
                        value => _assert_fail@1,
                        module => <<"my/mod"/utf8>>,
                        function => <<"go"/utf8>>,
                        line => 3})
    end,
    Y@1.

